# Plataforma-de-Dados-de-E-commerce-em-Tempo-Real

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
airflow/dags/: maintenance_pipeline.py  purchase_batch_pipeline.py
contracts/: cart.v1.avsc  cart.v1.schema.json  purchase.v1.avsc  purchase.v1.schema.json
dashboard/: Dockerfile  app.py  requirements.txt
dbt/: dbt_project.yml  profiles.yml
docs/: architecture.md  backlog.md  observability.md  roadmap.md
docs/adr/: 0001-table-format-iceberg.md  0002-streaming-engine-spark.md  0003-data-contract-json-schema.md  0004-medallion-and-quality-gate.md  0005-event-time-windowing-watermark.md  0006-stateful-abandoned-carts.md  0007-avro-schema-registry.md  0008-dimensional-modeling.md
generator/: Dockerfile  requirements.txt  simulator.py
monitoring/alerting/: rules.yml
monitoring/prometheus/: prometheus.yml
scripts/: kafka_lag.sh  register_schemas.sh  slice.sh
spark/: Dockerfile
spark/conf/: spark-defaults.conf
spark/jobs/: bootstrap_tables.py  bronze_carts.py  bronze_ingest.py  dim_tables.py  dlq_replay.py  gold_abandoned_carts.py  gold_aggregations.py  gold_revenue_per_minute.py  iceberg_compaction.py  quality_gate.py  schemas.py  show_gold.py  silver_purchases.py  transforms.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_contract_validation.py  test_gold_aggregations.py  test_quality_gate.py  test_simulator.py  test_transforms.py
trino/catalog/: iceberg.properties
(+13 files in other folders)
