[project]
name = "ecommerce-lakehouse"
version = "0.1.0"
description = "Plataforma Lakehouse de e-commerce em tempo real (vertical slice: purchase)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["generator", "spark/jobs"]
addopts = "-q"
